@@ -8,3 +8,7 @@ tarprep::
 clean::
 	${MAKE} -C tests $@
 	${MAKE} -C src $@
+
+distclean::
+	${MAKE} -C tests $@
+	${MAKE} -C src $@
