@@ -40,9 +40,11 @@ deps/%_deps: %.cc
 	 sed 's/\($*\)\.o[ :]*/\1.o $(@D)\/$(@F) : /g' > $@ ; [ -s $@ ] || \
 	 rm -f $@
 
-#  only include dependency makefiles if target is not 'clean'
+#  only include dependency makefiles if target is not 'clean' or 'distclean'
 ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),distclean)
 -include ${OBJDEPS}
+endif
 endif
 
 %.o: %.cc deps/%_deps
@@ -56,3 +58,6 @@ Test%: Test%.o ../lib/libDwmCredence.la
 
 clean:
 	${LIBTOOL} --mode=clean rm -f ${TESTS} ${OBJFILES}
+
+distclean:: clean
+	rm -f deps/*_deps
